V0.3.6
*Note* the configuration files have been reorganized. Old workspace configurations will not work anymore.

# Features
* Sorting of partitions and volumes now reflect the hardware ordering. #18
* Added used storage information everywhere in the GUI. #21
* Overal GUI cleanups and improvements. More compact dialogs.
* Configuration file cleanups. #26
* Batch deletion of volumes. #20
* Portable package imports now work the same everwhere.
* Delete objects will analyze the graph upstream and downstream and offer approriate deletion options. #29

# Bugfixes
* Corrected linux package dependencies
* Fix for broken partition allocation window.
* Consolidate menus and make them more consistent. #24
* Dialog consistency cleanups. #23
* Fix for the workspace chooser on startup overlapping with the experimental dialog.
* When multiple portable volume packages or program packages were imported into the same volume, the programs were interleaved. They are now ordered together by volume.
